--- a/projeto-2-anos-com-voce/pagina1/estilo/style.css
+++ b/projeto-2-anos-com-voce/pagina1/estilo/style.css
@@ -41,7 +41,7 @@ button{
     border: 1px solid var(--cor1);
     padding: 10px;
     border-radius: 8px;
-    
+    margin-top: 10px;
 }
 button:hover{
     background-color: var(--cor1);
@@ -52,57 +52,25 @@ button:hover{
 strong{
     color: var(--cor2);
 }
-
-/* Style dos componentes criados pelo js*/
-.erro{
-    background-color: var(--cor4);
+input {
+    background-color: transparent;
+    border: 1px solid white;
+    padding: 5px;
+    margin-bottom: 10px;
+    width: 200px;
+}
+p{
     width: 300px;
-    height: 400px;
-    border-radius: 20px;
-    padding: 10px;
-    color: black;
+    margin: auto;
+    margin-top: 10px;
 }
+#login{
 
-.cont02{
-    height: 50vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
+    display: none;
 }
-.cont{
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#login h2{
+   font-size: 2.5em; 
 }
-.img{
-    background: url(../imagens/icon-erro.png) center center;
-    background-size: cover;
-    height: 200px;
-    width: 200px;
-    margin: auto;
-}
-.titu{
-    color: black;
-    font-size: 1.5em;
-}
-.text{
-    font-size: 0.9em;
-}
-.but{
-    background-color: var(--cor3);
-    border: 1px solid var(--cor1);
-    padding: 10px;
-    border-radius: 8px;
-    width: 200px;
-    margin: auto;
-}
-.but:hover{
-    background-color: var(--cor1);
-    color: var(--cor3);
-    border: 1px solid var(--cor2);
-  
+#login h4 {
+    margin: 10px;
 }
