--- a/projeto-2-anos-com-voce/Repositorio de Lembrancas/css/style.css
+++ b/projeto-2-anos-com-voce/Repositorio de Lembrancas/css/style.css
@@ -13,20 +13,6 @@
     box-sizing: border-box;
 }
 
-nav{
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
-    background-color: var(--cor2);
-}
-
-nav div{
-    background-color: var(--cor3);
-    border: 1px solid var(--cor1);
-    color: var(--cor1);
-    padding: 3px 8px;
-    border-radius: 6px;
-}
 header{
     height: 100vh;
     background: url("../imagens/imgsAssistentes/imagemdefundo.png") center center;
@@ -47,8 +33,9 @@ main{
     background-color: var(--cor1);
     padding: 20px;
     color: white;
+    text-align: center;
 }
-main article{
+main .card{
     width: 320px;
     height: 220px;
     background-color: #fcedd3;
@@ -62,6 +49,7 @@ main article{
     max-width: 500px;
     min-width: 200px;
     margin: 20px 0px;
+
 }
 .carrossel{
     display: grid;
@@ -72,11 +60,16 @@ main article{
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
 }
+.carrossel img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
 
 article{
     background-color: var(--cor4);
     padding: 20px;
-
 }
 .linha-conteiner{
     display: flex;
@@ -90,9 +83,9 @@ article h1{
 }
 
 article .img{
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
+    width: 200px;
+    height: 260px;
+    border-radius: 10px 0px 10px 0px;
     background-color: #820a32;
 }
 
@@ -109,6 +102,15 @@ article #img02{
 
 }
 
+article #img03{
+    background: url(../imagens/linhaDoTempo/ChatGPT\ Image\ 11\ de\ ago.\ de\ 2025\,\ 11_34_36.png) top center;
+    background-size: cover; 
+    border: 2px solid var(--cor1);
+
+}
+#linha-meio{
+    text-align: end;
+}
 .linha-conteiner .text {
     width: 50%;
 }
@@ -140,4 +142,15 @@ footer {
     background-color: var(--cor1);
     color: white;
     text-align: center;
+}
+button{
+    background-color: var(--cor4);
+    border: 1px solid var(--cor2);
+    padding: 10px;
+    border-radius: 8px;
+    margin: auto;
+    margin-top: 10px;
+}
+.carroseis{
+    display: none;
 }
