--- a/projeto-2-anos-com-voce/Repositorio de Lembrancas/css/style.css
+++ b/projeto-2-anos-com-voce/Repositorio de Lembrancas/css/style.css
@@ -35,6 +35,7 @@ main{
     color: white;
     text-align: center;
 }
+
 main .card{
     width: 320px;
     height: 220px;
@@ -51,6 +52,15 @@ main .card{
     margin: 20px 0px;
 
 }
+aside{
+    margin-top: 40px;
+
+}
+aside h3{
+    margin-bottom: 10px;
+    font-size: 1.7em;
+}
+
 .carrossel{
     display: grid;
     grid-auto-flow: column;
@@ -67,6 +77,11 @@ main .card{
     border-radius: 20px;
 }
 
+.carrossel div{
+    width: 250px;
+    height: 300px;
+}
+
 article{
     background-color: var(--cor4);
     padding: 20px;
@@ -79,7 +94,11 @@ article{
 }
 article h1{
     text-align: center;
-    margin: 15px;
+    margin: 25px;
+    font-size: 2em;
+}
+article h2{
+    margin-bottom: 10px;
 }
 
 article .img{
@@ -110,19 +129,21 @@ article #img03{
 }
 #linha-meio{
     text-align: end;
+    margin-bottom: 30px;
+
 }
 .linha-conteiner .text {
     width: 50%;
+    margin-bottom: 30px;
 }
 section{
-    height: 90vh;
+    height: 100vh;
     padding: 20px;
     text-align: center;
     display: grid;
     justify-content: center;
     align-items: center;
-    background-color: var(--cor1);
-    color: white;
+    background-color: var(--cor4);
 }
 
 section div{
