--- a/projeto-2-anos-com-voce/Repositorio de Lembrancas/css/style.css
+++ b/projeto-2-anos-com-voce/Repositorio de Lembrancas/css/style.css
@@ -30,8 +30,7 @@ header h1{
     margin-bottom: 30px;
 }
 main{
-    background-color: var(--cor1);
-    padding: 20px;
+    background-image: linear-gradient(#2e0714, #440a1d, #820a32, #820a32, #a10a3c);
     color: white;
     text-align: center;
 }
@@ -39,10 +38,8 @@ main{
 main .card{
     width: 320px;
     height: 220px;
-    background-color: #fcedd3;
     scroll-snap-align: center;
     border-radius: 20px;
-
 }
 .content {
     max-width: 500px;
@@ -50,13 +47,33 @@ main .card{
     margin: 20px 0px;
 
 }
+.melhores{
+    padding: 40px 20px;
+}
+.melhores h1{
+    font-size: 2em;
+    margin-bottom: 15px;
+}
+.melhores p{
+    font-size: 1.2em;
+
+}
+
+.carroseis{
+    width: 100vw;
+    padding: 20px;
+    position: relative;
+}
 aside{
     margin-top: 40px;
 }
 aside h3{
-    margin-bottom: 10px;
-    font-size: 1.2em;
+    margin-bottom: 20px;
+    font-size: 1.7em;
 
+}
+aside p{
+    margin-bottom: 20px;
 }
 
 .carrossel{
@@ -82,28 +99,40 @@ aside h3{
 
 article{
     background-color: var(--cor4);
-    padding: 20px;
+    padding: 40px 20px;
 }
 .linha-conteiner{
     display: flex;
-    align-items: center;
+    flex-wrap: wrap-reverse;
     gap: 10px;
     margin-bottom: 20px;
+    justify-content: center;
 }
 article h1{
     text-align: center;
-    margin: 25px;
-    font-size: 2em;
+    margin-bottom: 25px;
+    font-size: 2.2em;
 }
 article h2{
     margin-bottom: 10px;
+    font-size: 2em;
 }
+article .text{
+    width: 300px;
+    margin: auto;
+    text-align: center;
 
+}
+article p{
+    width: 300px;
+    font-size: 1.2em;
+}
 article .img{
-    width: 200px;
-    height: 260px;
-    border-radius: 10px 0px 10px 0px;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
     background-color: #820a32;
+    margin-bottom: 20px;
 }
 
 article #img01{
@@ -130,37 +159,43 @@ article #img03{
     margin-bottom: 30px;
 
 }
-.linha-conteiner .text {
-    width: 50%;
-    margin-bottom: 30px;
-}
-section{
-    height: 100vh;
-    padding: 20px;
+.fim{
+    padding: 25px;
     text-align: center;
     display: grid;
     justify-content: center;
     align-items: center;
     background-color: var(--cor4);
 }
+.fim h1{
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+.fim p{
+    font-size: 1.1em;
+    margin-bottom: 20px;
 
-section div{
+}
+
+.fim div{
     background-color: aqua;
     width: 80%;
     height: 200px;
     margin: auto;
     margin-top: 20px;
 }
-section .img{
+.fim .img{
     background: url(../imagens/melhoresMomentos/IMG-20250622-WA0034.jpg) center center;
     background-size: cover;
-    border-radius: 10px;
+    border-radius: 20px;
     border: 2px solid;
+        margin-bottom: 20px;
+
 }
 footer {
-    background-color: var(--cor1);
-    color: white;
+    background-color: var(--cor4);
     text-align: center;
+    padding: 10px;
 }
 button{
     background-color: var(--cor4);
