--- a/projeto-2-anos-com-voce/pagina-inicial/estilo/style.css
+++ b/projeto-2-anos-com-voce/pagina-inicial/estilo/style.css
@@ -25,7 +25,9 @@ body{
 }
 h1{
     font-size: 3em;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    width: 300px;
+    margin: auto;
 }
 h3{
     font-size: 2em;
@@ -39,9 +41,10 @@ p{
 button{
     background-color: var(--cor3);
     border: 1px solid var(--cor1);
-    padding: 10px;
+    padding: 15px;
     border-radius: 8px;
-    margin-top: 10px;
+    margin-top: 20px;
+    font-size: 1em;
 }
 button:hover{
     background-color: var(--cor1);
@@ -55,26 +58,29 @@ strong{
 input {
     background-color: transparent;
     border: 1px solid white;
-    padding: 5px;
+    padding: 10px;
     margin-bottom: 10px;
-    width: 200px;
-    border-radius: 5px;
+    width: 300px;
+    border-radius: 10px;
     color: white;
 }
 p{
     width: 300px;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #login{
 
     display: none;
 }
 #login h2{
-   font-size: 2.5em; 
+   font-size: 2.5em;
+   width: 300px;
+   margin-top: 20px; 
 }
 #login h4 {
     margin: 10px;
+    font-size: 1.5em;
 }
 .click {
     position: fixed;
@@ -84,9 +90,7 @@ p{
 .pup{
     position: fixed;
     max-width: 300px;
-    max-height: 400px;
     background-color: var(--cor4);
-    
     border-radius: 20px;
     padding: 20px;
     color: black;
@@ -94,13 +98,16 @@ p{
 .text{
     padding: 20px;
 }
+.text h2{
+    font-size: 2em;
+}
 .text h4{
-    margin: -10;
+    margin-bottom: -10px;
 }
 .text p{
     width: 230px;
 }
 #msgerro{
-    font-size: 0.8em;
-    width: 190px;
+    font-size: 1em;
+    width: 250px;
 }
