--- a/projeto-2-anos-com-voce/quiz/style.css
+++ b/projeto-2-anos-com-voce/quiz/style.css
@@ -16,7 +16,6 @@ body{
     justify-content: center;
     align-items: center;
     background-color: var(--cor1);
-    padding: 20px;
 }
 #number{
     background-color: var(--cor4);
@@ -28,48 +27,54 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.8em;
+    font-size: 2em;
 }
 h1{
     text-align: center;
     background-color: var(--cor4);
-    max-width: 320px;
+    max-width: 350px;
     margin: 10px;
-    padding: 10px;
+    padding: 20px 14px;
     border-radius: 20px;
-    font-size: 1.5em;
+    font-size: 2em;
 }
 aside{
     background-color: var(--cor4);
     max-width: 290px;
     margin: auto;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 17px;
+    font-size: 1.2em;
     border-radius: 15px;
 
 }
 .fundo{
     position: fixed;
     background-color: rgba(0, 0, 0, 0.608);
+    margin: auto;
     width: 100vw;
     height: 100vh;
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
 }
 .content{
-    width: 300px;
+    width: 350px;
     background-color: var(--cor3);
-    padding: 20px;
+    padding: 25px;
     border-radius: 20px;
     text-align: center;
     border: 2px solid var(--cor1);
 }
 .content h3{
-    font-size: 1.5em;
+    font-size: 1.8em;
 }
 .content div {
     margin-bottom: 10px;
+    font-size: 1.2em;
+}
+.content div{
+   
 }
 button:hover{
     background-color: var(--cor3);
@@ -80,7 +85,8 @@ button{
     background-color: var(--cor1);
     color: var(--cor3);
     border: 1px solid var(--cor2);
-    padding: 10px;
+    padding: 15px;
+    font-size: 1em;
     border-radius: 8px;
     margin-top: 10px;
 }
